force-app/main/default/objects/Payment_Tracker__c/Payment_Tracker__c.object-meta.xml
<CustomObject>
    <description>Tracks status of payments of each payment attempt.</description>
    <label>Payment Tracker</label>
    <nameField>
        <displayFormat>PAY-{00000}</displayFormat>
        <label>Payment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Tracker</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>