force-app/main/default/objects/Payment_Tracker__c/fields/CartId__c.field-meta.xml
<CustomField>
    <fullName>CartId__c</fullName>
    <description>Unique Cart Id</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Cart Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>