force-app/main/default/objects/Payment_Tracker__c/fields/ClaimNumber__c.field-meta.xml
<CustomField>
    <fullName>ClaimNumber__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Claim Number</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>