force-app/main/default/objects/Payment_Tracker__c/fields/ClaimStatus__c.field-meta.xml
<CustomField>
    <fullName>ClaimStatus__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Claim Status</label>
    <length>2</length>
    <type>Text</type>
</CustomField>