force-app/main/default/objects/Payment_Tracker__c/fields/CurrentAmountOwed__c.field-meta.xml
<CustomField>
    <fullName>CurrentAmountOwed__c</fullName>
    <label>Current Amount Owed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>