force-app/main/default/objects/Payment_Tracker__c/fields/ErrorCode__c.field-meta.xml
<CustomField>
    <fullName>ErrorCode__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Error Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>