force-app/main/default/objects/Payment_Tracker__c/fields/ErrorDescription__c.field-meta.xml
<CustomField>
    <fullName>ErrorDescription__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Error Description</label>
    <length>250</length>
    <type>Text</type>
</CustomField>