force-app/main/default/objects/Payment_Tracker__c/fields/IndividualId__c.field-meta.xml
<CustomField>
    <fullName>IndividualId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>IndividualId</label>
    <length>12</length>
    <type>Text</type>
</CustomField>