force-app/main/default/objects/Payment_Tracker__c/fields/ProgramCode__c.field-meta.xml
<CustomField>
    <fullName>ProgramCode__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Program Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>