force-app/main/default/objects/Payment_Tracker__c/fields/RepaymentAmount__c.field-meta.xml
<CustomField>
    <fullName>RepaymentAmount__c</fullName>
    <label>Repayment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>