force-app/main/default/objects/Payment_Tracker__c/fields/SessionId__c.field-meta.xml
<CustomField>
    <fullName>SessionId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Session Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>